fix: remove the spec logo clipping

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -211,6 +211,10 @@
 		font-size: 14px;
 	}
 
+	&__job-logo {
+		min-width: 17px;
+	}
+
 	&__job-company-box {
 		display: grid;
 		column-gap: 8px;
